--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,5 @@ body {
   font-family: 'Montserrat', 'Poppins', 'sans-serif';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #a1cac8;
+  background-color: #9abec1;
 }
