--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #a1cac8;
+  /*background-color: #f9f9f9;*/
   color: #333030;
 }
